--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
         <div class="wrapper row">
-            <aside class="col-2 col-md-3 pt-2 px-4 d-none" id="sideMenu">
+            <aside class="col-1 col-md-3 pt-2 px-4 d-none" id="sideMenu">
                 <img src="./assets/img/business manager noSlogan 1.png" alt="">
 
                 <div class="mt-5 d-flex">
@@ -65,7 +65,7 @@
 
                 <div class="container-fluid bg-gray py-3">
                     <div class="row">
-                        <div class="col-sm-8">
+                        <div class="col-md-8">
                             <div class="product-area">
                                 <div class="py-3 px-3">
                                     <div class="w-100 position-relative">
@@ -183,41 +183,41 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-4 checkout-area">
+                        <div class="col-md-4 mt-3 mt-md-0 checkout-area">
                             <h1 class="font-lg font-bold">মূল্য পরিশোধ মাধ্যম</h1>
                             <div class="row">
                                 <div class="col-6">
-                                    <button class="w-100 position-relative py-1 rounded border border-1">
+                                    <div class="w-100 position-relative py-1 px-2 rounded border border-1">
                                         <label for="nagod">
                                             <img src="./assets/img/money 2.png" alt="">
                                             <span class="font-md pl-2">নগদ টাকা</span>
                                         </label>
                                         <input class="radioPosition" id="nagod" name="payment" type="radio">
-                                    </button>
+                                    </div>
                                 </div>
 
                                 <div class="col-6">
-                                    <button class="w-100 position-relative rounded border border-1 py-1">
+                                    <div class="w-100 position-relative rounded border border-1 py-1 px-2">
                                         <label for="digital">
                                             <img src="./assets/img/cashless-payment 2.png" alt="">
                                             <span class="font-md">ডিজিটাল পেমেন্ট</span>
                                         </label>
                                         <input class="radioPosition" id="digital" name="payment" type="radio">
-                                    </button>
+                                    </div>
                                 </div>
 
                                 <div class="col-6 mt-3">
-                                    <button class="w-100 position-relative rounded border border-1 py-1">
+                                    <div class="w-100 position-relative rounded border border-1 py-1 px-2">
                                         <label for="due" >
                                             <img src="./assets/img/Group 4622.png" alt="">
                                             <span class="font-md pl-2">বাকী</span>
                                         </label>
                                         <input class="radioPosition" id="due" name="payment" type="radio">
-                                    </button>
+                                    </div>
                                 </div>
 
                                 <div class="col-6 mt-3" id="paymentToggole">
-                                    <button class="w-100 position-relative rounded border border-1 py-1">
+                                    <div class="w-100 position-relative rounded border border-1 py-1 px-2 text-center">
                                         <span class="font-md">আরও দেখুন</span>
                                         <div class="d-flex justify-content-between">
                                             <img src="./assets/img/image 317.png" alt="">
@@ -225,36 +225,36 @@
                                             <img src="./assets/img/image 313.png" alt="">
 
                                         </div>
-                                    </button>
+                                    </div>
                                 </div>
 
                                 <!-- hidden Payment  -->
                                 <div class="col-6 mt-3 d-none pmntHide" id="pmnt1">
-                                    <button class="w-100 position-relative rounded border border-1 py-1">
+                                    <div class="w-100 position-relative rounded border border-1 py-2 px-2">
                                         <label for="due" >
-                                            <img src="./assets/img/Group 4622.png" alt="">
+                                            <img src="./assets/img/image 317.png" alt="">
                                             <span class="font-md pl-2">বাকী</span>
                                         </label>
                                         <input class="radioPosition" id="due" name="payment" type="radio">
-                                    </button>
+                                    </div>
                                 </div>
                                 <div class="col-6 mt-3 d-none pmntHide" id="pmnt2">
-                                    <button class="w-100 position-relative rounded border border-1 py-1">
+                                    <div class="w-100 position-relative rounded border border-1 py-2 px-2">
                                         <label for="due" >
-                                            <img src="./assets/img/Group 4622.png" alt="">
+                                            <img src="./assets/img/image-removebg-preview 1.png" alt="">
                                             <span class="font-md pl-2">বাকী</span>
                                         </label>
                                         <input class="radioPosition" id="due" name="payment" type="radio">
-                                    </button>
+                                    </div>
                                 </div>
                                 <div class="col-6 mt-3 d-none pmntHide" id="pmnt3">
-                                    <button class="w-100 position-relative rounded border border-1 py-1">
+                                    <div class="w-100 position-relative rounded border border-1 py-2 px-2">
                                         <label for="due" >
-                                            <img src="./assets/img/Group 4622.png" alt="">
+                                            <img src="./assets/img/image 313.png" alt="">
                                             <span class="font-md pl-2">বাকী</span>
                                         </label>
                                         <input class="radioPosition" id="due" name="payment" type="radio">
-                                    </button>
+                                    </div>
                                 </div>
                                 <div class="col-6 mt-3 d-none pmntHide" id="seeLess">
                                     <button class="w-100 h-100 rounded border border-1 py-1">
