--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="d-flex justify-content-between header-top">
                         <div class="col-7 col-md-6 py-2">
                             <div class="d-flex p-0">
-                                <img id="menuBtn" class="menu-icon mt-1 mr-3" src="./assets/img/menu_open.png" alt="">
+                                <img id="menuBtn" class="menu-icon mt-1 mr-3" src="./assets/img/menu_open.png" alt=""/>
                                 <div class="w-100 position-relative">
                                     <input class="form-control pl-5 py-3 border font-md" type="search"
                                         placeholder="অনুসন্ধান করুন">
