--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <div class="col-md-4 mt-5 mt-md-0 checkout-area">
                             <h1 class="font-lg font-bold">মূল্য পরিশোধ মাধ্যম</h1>
                             <div class="row">
-                                <div class="col-6">
+                                <div class="col-6 col-md-12 col-lg-6 pb-2">
                                     <div class="w-100 position-relative py-1 px-2 rounded border border-1">
                                         <label for="cash">
                                             <img src="./assets/img/money 2.png" alt="">
@@ -198,7 +198,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-6">
+                                <div class="col-6 col-md-12 col-lg-6 pb-2">
                                     <div class="w-100 position-relative rounded border border-1 py-1 px-2">
                                         <label for="digital">
                                             <img src="./assets/img/cashless-payment 2.png" alt="">
@@ -208,7 +208,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-6 mt-3">
+                                <div class="col-6 col-md-12 col-lg-6 pb-2">
                                     <div class="w-100 position-relative rounded border border-1 py-1 px-2">
                                         <label for="due" >
                                             <img src="./assets/img/Group 4622.png" alt="">
@@ -218,7 +218,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-6 mt-3" id="paymentToggole">
+                                <div class="col-6 col-md-12 col-lg-6" id="paymentToggole">
                                     <div class="w-100 position-relative rounded border border-1 py-1 px-2 text-center">
                                         <span class="font-md">আরও দেখুন</span>
                                         <div class="d-flex justify-content-between">
@@ -231,7 +231,7 @@
                                 </div>
 
                                 <!-- hidden Payment  -->
-                                <div class="col-6 mt-3 d-none pmntHide" id="pmnt1">
+                                <div class="col-6 col-md-12 col-lg-6 pb-2 d-none pmntHide" id="pmnt1">
                                     <div class="w-100 position-relative rounded border border-1 py-2 px-2">
                                         <label for="nagod" >
                                             <img src="./assets/img/image 317.png" alt="">
@@ -239,7 +239,7 @@
                                         <input class="radioPosition" id="nagod" name="payment" type="radio">
                                     </div>
                                 </div>
-                                <div class="col-6 mt-3 d-none pmntHide" id="pmnt2">
+                                <div class="col-6 col-md-12 col-lg-6 pb-2 d-none pmntHide" id="pmnt2">
                                     <div class="w-100 position-relative rounded border border-1 py-2 px-2">
                                         <label for="roket" >
                                             <img src="./assets/img/image-removebg-preview 1.png" alt="">
@@ -247,7 +247,7 @@
                                         <input class="radioPosition" id="roket" name="payment" type="radio">
                                     </div>
                                 </div>
-                                <div class="col-6 mt-3 d-none pmntHide" id="pmnt3">
+                                <div class="col-6 col-md-12 col-lg-6 pb-lg-0 pb-md-2 d-none pmntHide" id="pmnt3">
                                     <div class="w-100 position-relative rounded border border-1 py-2 px-2">
                                         <label for="city" >
                                             <img src="./assets/img/image 313.png" alt="">
@@ -255,7 +255,7 @@
                                         <input class="radioPosition" id="city" name="payment" type="radio">
                                     </div>
                                 </div>
-                                <div class="col-6 mt-3 d-none pmntHide" id="seeLess">
+                                <div class="col-6 col-md-12 col-lg-6 d-none pmntHide" id="seeLess">
                                     <button class="w-100 h-100 rounded border border-1 py-1">
                                         See Less
                                     </button>
