--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <aside class="col-md-3 pt-2 px-4 d-none resAside" id="sideMenu">
                 <img class="w-75 w-lg-100" src="./assets/img/business manager noSlogan 1.png" alt="">
 
-                <div class="mt-5 d-flex">
-                    <img src="./assets/img/Vector (3).png" alt="">
+                <div class="mt-4 d-flex">
+                    <img class="sideShopImg" src="./assets/img/Vector (3).png" alt="">
                     <div class="ml-3">
-                        <span class="font-md font-bold sideText">মেসার্স রোনাসা স্টীল</span> <br>
-                        <span class="font-sm sideText">দোকান নং #২৩, নিউ সুপার মার্কে...</span>
+                        <span class="font-md font-bold sideShopText">মেসার্স রোনাসা স্টীল</span> <br>
+                        <span class="font-sm sideShopTitle">দোকান নং #২৩, নিউ সুপার মার্কে...</span>
                     </div>
                 </div>
                 <div class="my-4">
@@ -92,8 +92,8 @@
                                             <div class="d-flex">
                                                 <img src="./assets/img/rise.png" alt="">
                                                 <div class="pl-2">
-                                                    <span class="font-lg resPrdctText">রূপচাঁদা সয়াবিন তেল<span><br />
-                                                            <span class="font-md resPrdctItmTxt">মুদি পণ্য</span>
+                                                    <span class="font-lg prdctTxt ">রূপচাঁদা সয়াবিন তেল<span><br />
+                                                            <span class="font-md PrdctTitle">মুদি পণ্য</span>
                                                 </div>
                                             </div>
                                         </label>
@@ -113,8 +113,8 @@
                                                 aria-controls="collapseOne">
                                                 <img src="./assets/img/milk.png" alt="">
                                                 <div class="pl-2">
-                                                    <span class="font-lg resPrdctText">রূপচাঁদা সয়াবিন তেল (৩ ধরন)<span><br />
-                                                            <span class="font-md resPrdctItmTxt">মুদি পণ্য</span>
+                                                    <span class="font-lg prdctTxt">রূপচাঁদা সয়াবিন তেল (৩ ধরন)<span><br />
+                                                            <span class="font-md PrdctTitle">মুদি পণ্য</span>
                                                 </div>
                                             </label>
 
@@ -128,7 +128,7 @@
                                                     <label for="id2A" class="product">
                                                         <div class="d-flex">
                                                             <img src="./assets/img/oil.png" alt="">
-                                                            <span class="font-md resPrdctText pl-2">৩ লিটার</span>
+                                                            <span class="font-md prdctTxt pl-2">৩ লিটার</span>
                                                         </div>
                                                     </label>
                                                     <label for="id2A" class="stok font-lg resPrdctItmTxt">২৫০</label>
@@ -141,7 +141,7 @@
                                                     <label for="id2B" class="product">
                                                         <div class="d-flex">
                                                             <img src="./assets/img/chili.png" alt="">
-                                                            <span class="font-md resPrdctText pl-2">৩ লিটার</span>
+                                                            <span class="font-md prdctTxt pl-2">৩ লিটার</span>
                                                         </div>
                                                     </label>
                                                     <label for="id2B" class="stok font-lg resPrdctItmTxt">২৫০</label>
@@ -154,7 +154,7 @@
                                                     <label for="id2C" class="product">
                                                         <div class="d-flex">
                                                             <img src="./assets/img/oil3.png" alt="">
-                                                            <span class="font-md resPrdctText pl-2">৩ লিটার</span>
+                                                            <span class="font-md prdctTxt pl-2">৩ লিটার</span>
                                                         </div>
                                                     </label>
                                                     <label for="id2C" class="stok font-lg resPrdctItmTxt">২৫০</label>
@@ -172,8 +172,8 @@
                                             <div class="d-flex">
                                                 <img src="./assets/img/chili.png" alt="">
                                                 <div class="pl-2">
-                                                    <span class="font-lg resPrdctText">রূপচাঁদা সয়াবিন তেল<span><br />
-                                                            <span class="font-md resPrdctItmTxt">মুদি পণ্য</span>
+                                                    <span class="font-lg prdctTxt">রূপচাঁদা সয়াবিন তেল<span><br />
+                                                            <span class="font-md PrdctTitle">মুদি পণ্য</span>
                                                 </div>
                                             </div>
                                         </label>
